// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentChooserField #error 1`] = `
<div>
  <div
    class="field document_chooser_field required error"
  >
    <label
      for="struct-01test"
    >
      Test Char Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser document-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              a
               
              document
            </button>
          </div>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      <p
        class="error-message"
      >
        This field is required.
      </p>
    </div>
  </div>
</div>
`;

exports[`DocumentChooserField #help_text 1`] = `
<div>
  <div
    class="field document_chooser_field"
  >
    <label
      for="struct-01test"
    >
      Test DocumentChooser Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser document-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              a
               
              document
            </button>
          </div>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      
    </div>
  </div>
</div>
`;

exports[`DocumentChooserField #label 1`] = `
<div>
  <div
    class="field document_chooser_field"
  >
    <label
      for="struct-01test"
    >
      Test DocumentChooser Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser document-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              a
               
              document
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`DocumentChooserField #minimal 1`] = `
<div>
  <div
    class="field document_chooser_field"
  >
    <label
      for="struct-01test"
    >
      Test
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser document-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              a
               
              document
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`DocumentChooserField #required 1`] = `
<div>
  <div
    class="field document_chooser_field required"
  >
    <label
      for="struct-01test"
    >
      Test DocumentChooser Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser document-chooser"
        >
          <div
            class="chosen"
          >
            <span
              class="title"
            >
              Test Document
            </span>
            <ul
              class="actions"
            >
              <li>
                <button
                  class="button action-choose button-small button-secondary"
                  type="button"
                >
                  Choose another 
                  document
                </button>
              </li>
              <li>
                <a
                  class="edit-link button button-small button-secondary"
                  href="/document/edit/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Edit this 
                  document
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      
    </div>
  </div>
</div>
`;
